--- a/force-app/main/default/layouts/ClickDep__c-ClickDep Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/ClickDep__c-ClickDep Layout.layout-meta.xml
@@ -14,6 +14,10 @@
                 <behavior>Edit</behavior>
                 <field>MyDate__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>mytext__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
